--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.6.0",
-        "normalize.css": "^8.0.1"
+        "normalize.css": "^8.0.1",
+        "swiper": "^8.3.2"
     }
 }
