--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "image-webpack-loader": "^7.0.1",
         "imagemin-pngquant": "^5.1.0",
         "mini-css-extract-plugin": "^1.3.8",
+        "mixitup": "^3.3.1",
         "node-sass": "^5.0.0",
         "path": "^0.12.7",
         "pngquant-bin": "^3.1.1",
